fix calendar overflow, and deleted some code

--- a/frontend/src/pages/mainpage/Mainpage_section4/mainpage-section4.css
+++ b/frontend/src/pages/mainpage/Mainpage_section4/mainpage-section4.css
@@ -168,7 +168,11 @@
 
 @media (max-width: 479px) {
   .calendarsWrapper {
-    width: auto;
+    width: 100%;
+
+  }
+  .calendar2 {
+    translate: 0 -50px;
   }
   .calendar {
     
@@ -178,7 +182,7 @@
       flex-direction: column;
       align-items: center;
       .calendar1, .calendar2 {
-        transform: scale(0.9);
+        transform: scale(0.8);
         h2 {
           margin: 40px 0 10px 0;
           text-align: center;
@@ -205,7 +209,7 @@
           height: 25px;
         }
         h3 {
-          font-size: 14px;
+          font-size: 12px;
           width: fit-content;
           text-align: left;
         }
@@ -216,17 +220,22 @@
       gap: 10px;
       align-items: flex-start;
       p {
-        font-size: 14px;
+        font-size: 12px;
+        text-align: left;
       }
     }
     .pujceni-counter {
       align-items: end;
       p {
-        font-size: 14px;
+        font-size: 12px;
+        text-align: left;
       }
       h5 {
         font-weight: 800;
       }
+    }
+    .pujceni-button {
+      justify-content: center;
     }
   }
 
